[update] add endpoint to get list organization
