# api-gateway/internal/modules/organization/handler.go
@@ -1,10 +1,12 @@
 package organization
 
 import (
+	"context"
 	"net/http"
 
 	"github.com/IKHINtech/erp_api_gateway/internal/utils"
 	"github.com/gin-gonic/gin"
+	"google.golang.org/grpc/metadata"
 )
 
 type OrganizationHandler struct {
@@ -43,8 +45,25 @@ func (h *OrganizationHandler) UpdateOrganization(c *gin.Context) {
 func (h *OrganizationHandler) DeleteOrganization(c *gin.Context) {
 }
 
+// @Summary List Organization
+// @Description List Organization
+// @Tags Organization
+// @Accept json
+// @Produce json
+// @Success 200 {object} utils.SuccessResponse
+// @Failure 400 {object} utils.ErrorResponse
+// @Failure 401 {object} utils.ErrorResponse
+// @Failure 500 {object} utils.ErrorResponse
+// @Router /organization [get]
 func (h *OrganizationHandler) ListOrganizations(c *gin.Context) {
-	data, err := h.client.GetOrganizations(c)
+	token := c.GetHeader("Authorization")
+	if token == "" {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Token is required"})
+		return
+	}
+	md := metadata.New(map[string]string{"authorization": token})
+	ctx := metadata.NewOutgoingContext(context.Background(), md)
+	data, err := h.client.GetOrganizations(ctx)
 
 	if err != nil {
 		utils.RespondError(
